@@ -35,6 +35,7 @@ type httpConfig struct {
 	HideKeywords           []string `config:"hide_keywords"`
 	RedactAuthorization    bool     `config:"redact_authorization"`
 	MaxMessageSize         int      `config:"max_message_size"`
+	DecodeBody             bool     `config:"decode_body"`
 }
 
 var (
@@ -43,5 +44,6 @@ var (
 			TransactionTimeout: protos.DefaultTransactionExpiration,
 		},
 		MaxMessageSize: tcp.TCPMaxDataInStream,
+		DecodeBody:     true,
 	}
 )
