@@ -24,6 +24,8 @@ import (
 	"strings"
 	"time"
 
+	"github.com/pkg/errors"
+
 	"github.com/elastic/beats/libbeat/beat"
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/logp"
@@ -84,6 +86,7 @@ type httpPlugin struct {
 	hideKeywords        []string
 	redactAuthorization bool
 	maxMessageSize      int
+	mustDecodeBody      bool
 
 	parserConfig parserConfig
 
@@ -139,6 +142,8 @@ func (http *httpPlugin) setFromConfig(config *httpConfig) {
 	http.splitCookie = config.SplitCookie
 	http.parserConfig.realIPHeader = strings.ToLower(config.RealIPHeader)
 	http.transactionTimeout = config.TransactionTimeout
+	http.mustDecodeBody = config.DecodeBody
+
 	for _, list := range [][]string{config.IncludeBodyFor, config.IncludeRequestBodyFor} {
 		http.parserConfig.includeRequestBodyFor = append(http.parserConfig.includeRequestBodyFor, list...)
 	}
@@ -500,6 +505,8 @@ func (http *httpPlugin) newTransaction(requ, resp *message) beat.Event {
 	var timestamp time.Time
 
 	if requ != nil {
+		// Body must be decoded before extractParameters
+		http.decodeBody(requ)
 		path, params, err := http.extractParameters(requ)
 		if err != nil {
 			logp.Warn("Fail to parse HTTP parameters: %v", err)
@@ -533,6 +540,7 @@ func (http *httpPlugin) newTransaction(requ, resp *message) beat.Event {
 	}
 
 	if resp != nil {
+		http.decodeBody(resp)
 		httpDetails["response"] = common.MapStr{
 			"code":    resp.statusCode,
 			"phrase":  resp.statusPhrase,
@@ -623,6 +631,38 @@ func (http *httpPlugin) setBody(result common.MapStr, m *message) {
 	if m.sendBody && len(m.body) > 0 {
 		result["body"] = string(m.body)
 	}
+}
+
+func (http *httpPlugin) decodeBody(m *message) {
+	if m.saveBody && len(m.body) > 0 {
+		if http.mustDecodeBody && len(m.encodings) > 0 {
+			var err error
+			m.body, err = decodeBody(m.body, m.encodings, http.maxMessageSize)
+			if err != nil {
+				// Body can contain partial data
+				m.notes = append(m.notes, err.Error())
+			}
+		}
+	}
+}
+
+func decodeBody(body []byte, encodings []string, maxSize int) (result []byte, err error) {
+	if isDebug {
+		debugf("decoding body with encodings=%v", encodings)
+	}
+	for idx := len(encodings) - 1; idx >= 0; idx-- {
+		format := encodings[idx]
+		body, err = decodeHTTPBody(body, format, maxSize)
+		if err != nil {
+			// Do not output a partial body unless failure occurs on the
+			// last decoder.
+			if idx != 0 {
+				body = nil
+			}
+			return body, errors.Wrapf(err, "unable to decode body using %s encoding", format)
+		}
+	}
+	return body, nil
 }
 
 func splitCookiesHeader(headerVal string) map[string]string {
