@@ -95,6 +95,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 *Packetbeat*
 
 - Added DHCP protocol support. {pull}7647[7647]
+- Add support to decode HTTP bodies compressed with `gzip` and `deflate`. {pull}7915[7915]
 
 *Winlogbeat*
 
